syntax = "proto3";
option csharp_namespace = "Common";

option java_package = "catgirl.kirara.moe";


// Name: INPDDALBMBO
message ItemParam {
    uint32 item_id = 1;
    uint32 count = 2;
}

